[project]
name = "basana"
version = "1.9"
description = "A Python async and event driven framework for algorithmic trading, with a focus on crypto currencies."
authors = [
    {name = "Gabriel Becedillas", email = "gabriel.becedillas@gmail.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp[speedups]>=3.13.2",
    "python-dateutil>=2.9.0.post0",
]

[project.optional-dependencies]
charts = [
    "plotly>=6.4.0",
    "kaleido>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/gbeced/basana"
Repository = "https://github.com/gbeced/basana"
Documentation = "https://basana.readthedocs.io/en/latest/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "aioresponses>=0.7.8",
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "talipp>=2.7.0",
    "types-python-dateutil>=2.9.0.20251115",
    "websockets>=10.4",
    "pandas>=2.3.3",
    "statsmodels>=0.14.5",
    "textual>=6.6.0",
    "ruff>=0.14.5",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
]

[tool.ruff]
line-length = 120
exclude = [
    "pocs"
]

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set.
extend-select = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = true
include = ["basana/*"]
exclude_lines = [
    "raise NotImplementedError()",
    "pragma: no cover",
]

[tool.hatch.build.targets.wheel]
packages = ["basana"]
